Intro: Put more horizontal space between bucket icon and fraction icon on bucket
Intro: move max to upper right (right side of representation control panel).
Matching Game: Shrink values >1 more so they will both fit in the score box.
Matching Game: Added fraction representations for numbers > 1
Matching Game: Added audio buttons
Matching Game: Made audio off by default
Matching Game: Made black outline of "=" sign a bit thicker
Matching Game: Got rid of solid black "=" sign & click-to-toggle
Matching Game: Show the name of the next level
Matching Game: Fixed: Shouldn't be able to drag pieces out of the scoreboard
# 0.00.42 (61921) Feb 28, 2012
Moved the matching grid up a little to give it more negative space on the bottom
Added more levels and randomization
Fixed: make fractions sit on the scale instead of centered on it
# 0.00.41 (61879) Feb 28, 2012
Added prototype for matching game
Buffer audio to avoid mark/reset not supported error
# 0.00.40 (61737) Feb 24, 2012
Added special case for half-pies since they should be vertical instead of horizontal (like pies)
Added bucket/dragging for cake slices
# 0.00.39 (61666) Feb 23, 2012
Fixed: exception when removing a slice after max spinner reduced
Fixed: When adding cups with the spinner, container cup fills up before animated cup gets there
Made it possible to drag water away from cups
When decreasing the max below the current value, animate slices to return
Put the "Max" label centered above the spinner and number
Reduced the size of the bucket icon so that larger representations will fit
Made the bucket bottom "bottomless" so the long vertical bars don't stick out the bottom
# 0.00.38 (61577) Feb 22, 2012
Fixed: Vertical bars should fill from the bottom to match water glasses
Fixed: Slices duplicated when dragging out of containers (not just bucket)
Fixed: Bucket pie slices shouldn't jump around when changing the max spinner