@@ -1,3 +1,4 @@
+Intro: Moved the fraction control away from the left edge and closer to the bucket
 Intro: Put more horizontal space between bucket icon and fraction icon on bucket
 Intro: move max to upper right (right side of representation control panel).
 Matching Game: Shrink values >1 more so they will both fit in the score box.
